--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,19 +5,22 @@
     android:id="@+id/coordinator"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.MainActivity">
+    android:layout_margin="16dp"
+    tools:context=".ng.activities.HomeActivity">
+
+    <include
+        android:id="@+id/appbar"
+        layout="@layout/layout_appbar" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
         <TextView
             android:id="@+id/instructions_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
             android:background="?selectableItemBackground"
             android:clickable="true"
@@ -28,30 +31,33 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <Button
-            android:id="@+id/upload_eloc_status_button"
-            android:layout_height="?actionBarSize"
-            android:layout_width="match_parent"
-            android:text="@string/upload_eloc_status"
-            android:textColor="#fff"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toTopOf="@id/refresh_list_button" />
-
-        <Button
             android:id="@+id/refresh_list_button"
-            android:layout_height="?actionBarSize"
+            style="@style/ButtonStyle"
             android:layout_width="match_parent"
-            android:layout_marginBottom="4dp"
+            android:layout_height="?actionBarSize"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginBottom="16dp"
             android:text="@string/refresh_list"
-            android:textColor="#fff"
             android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@id/instructions_button" />
 
-        <ListView
-            android:id="@+id/devices_list_view"
+        <Button
+            android:id="@+id/upload_eloc_status_button"
+            style="@style/ButtonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginBottom="16dp"
+            android:text="@string/upload_eloc_status"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toTopOf="@id/refresh_list_button" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/devices_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginBottom="16dp"
-            android:visibility="gone"
+            android:layout_marginVertical="16dp"
+            android:visibility="visible"
             app:layout_constraintBottom_toTopOf="@id/upload_eloc_status_button"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -83,7 +89,4 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-
