--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,6 @@
     android:id="@+id/coordinator"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="16dp"
     tools:context=".ng.activities.HomeActivity">
 
     <include
@@ -34,7 +33,7 @@
             android:id="@+id/refresh_list_button"
             style="@style/ButtonStyle"
             android:layout_width="match_parent"
-            android:layout_height="?actionBarSize"
+            android:layout_height="@dimen/button_height"
             android:layout_marginHorizontal="16dp"
             android:layout_marginBottom="16dp"
             android:text="@string/refresh_list"
@@ -45,12 +44,23 @@
             android:id="@+id/upload_eloc_status_button"
             style="@style/ButtonStyle"
             android:layout_width="match_parent"
-            android:layout_height="?actionBarSize"
+            android:layout_height="@dimen/button_height"
             android:layout_marginHorizontal="16dp"
             android:layout_marginBottom="16dp"
             android:text="@string/upload_eloc_status"
             android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@id/refresh_list_button" />
+
+        <Button
+            android:id="@+id/find_eloc_button"
+            style="@style/ButtonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/button_height"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginBottom="16dp"
+            android:text="@string/map_button_text"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toTopOf="@id/upload_eloc_status_button" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/devices_recycler_view"
@@ -58,16 +68,16 @@
             android:layout_height="0dp"
             android:layout_marginVertical="16dp"
             android:visibility="visible"
-            app:layout_constraintBottom_toTopOf="@id/upload_eloc_status_button"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintBottom_toTopOf="@id/find_eloc_button"
+            app:layout_constraintTop_toBottomOf="@id/status_layout" />
 
         <LinearLayout
-            android:id="@+id/init_layout"
+            android:id="@+id/status_layout"
             android:layout_width="320dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:gravity="center"
             android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
