--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="bottom_bar_size">36dp</dimen>
     <dimen name="setup_icon_size">44dp</dimen>
     <dimen name="setup_button_width">280dp</dimen>
+    <dimen name="button_height">56dp</dimen>
 </resources>
