--- a/app/src/main/res/layout/activity_terminal.xml
+++ b/app/src/main/res/layout/activity_terminal.xml
@@ -51,7 +51,6 @@
                 android:id="@+id/instructions_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
                 android:background="?selectableItemBackground"
                 android:clickable="true"
@@ -59,7 +58,8 @@
                 android:text="@string/instructions"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                tools:ignore="TouchTargetSizeCheck" />
 
             <TextView android:layout_marginBottom="16dp"
                 android:id="@+id/recBtn"
@@ -200,6 +200,7 @@
                         app:layout_constraintBottom_toBottomOf="@id/sd_card_desc_tv"
                         app:layout_constraintEnd_toEndOf="@id/eloc_tv"
                         app:layout_constraintTop_toTopOf="@id/sd_card_title_tv"
+                        tools:ignore="TouchTargetSizeCheck"
                         tools:text="119GB" />
 
                     <ImageView
@@ -215,6 +216,7 @@
                         app:layout_constraintBottom_toBottomOf="@id/sd_card_value_tv"
                         app:layout_constraintEnd_toStartOf="@id/sd_card_value_tv"
                         app:layout_constraintTop_toTopOf="@id/sd_card_value_tv"
+                        tools:ignore="TouchTargetSizeCheck"
                         tools:visibility="visible" />
 
                     <View
@@ -343,44 +345,13 @@
                         android:background="@color/divider"
                         app:layout_constraintTop_toBottomOf="@id/recording_desc_tv" />
 
-                    <TextView
-                        android:id="@+id/time_sync_title_tv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="20dp"
-                        android:layout_marginTop="4dp"
-                        android:text="@string/last_time_sync"
-                        android:textSize="22sp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/divider5" />
-
-                    <TextView
-                        android:id="@+id/time_sync_desc_tv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/hours_since_last_sync"
-                        app:layout_constraintStart_toStartOf="@id/time_sync_title_tv"
-                        app:layout_constraintTop_toBottomOf="@id/time_sync_title_tv" />
-
-                    <TextView
-                        android:id="@+id/time_sync_value_tv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/off_color"
-                        android:textSize="28sp"
-                        android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="@id/time_sync_desc_tv"
-                        app:layout_constraintEnd_toEndOf="@id/eloc_tv"
-                        app:layout_constraintTop_toTopOf="@id/time_sync_title_tv"
-                        tools:text="438h" />
-
                     <View
                         android:id="@+id/divider6"
                         android:layout_width="match_parent"
                         android:layout_height="2dp"
                         android:layout_marginVertical="8dp"
                         android:background="@color/divider"
-                        app:layout_constraintTop_toBottomOf="@id/time_sync_desc_tv" />
+                        app:layout_constraintTop_toBottomOf="@id/recording_desc_tv" />
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/settings_section"
