--- a/app/src/main/res/layout/activity_terminal.xml
+++ b/app/src/main/res/layout/activity_terminal.xml
@@ -164,7 +164,7 @@
                     <View
                         android:id="@+id/divider1"
                         android:layout_width="match_parent"
-                        android:layout_height="4dp"
+                        android:layout_height="2dp"
                         android:layout_marginVertical="8dp"
                         android:background="@color/divider"
                         app:layout_constraintTop_toBottomOf="@id/ranger_name_tv" />
@@ -242,7 +242,7 @@
                         android:id="@+id/battery_desc_tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Charging Status"
+                        android:text=""
                         app:layout_constraintStart_toStartOf="@id/battery_title_tv"
                         app:layout_constraintTop_toBottomOf="@id/battery_title_tv" />
 
@@ -357,7 +357,7 @@
                         android:id="@+id/settings_section"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
+                        android:layout_marginTop="40dp"
                         android:clickable="true"
                         android:focusable="true"
                         app:layout_constraintEnd_toEndOf="@id/eloc_tv"
@@ -379,7 +379,7 @@
                         <View
                             android:id="@+id/divider7"
                             android:layout_width="match_parent"
-                            android:layout_height="4dp"
+                            android:layout_height="2dp"
                             android:layout_marginVertical="8dp"
                             android:background="@color/divider"
                             app:layout_constraintTop_toBottomOf="@id/settings_title" />
@@ -480,7 +480,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
-                        android:layout_marginTop="20dp"
+                        android:layout_marginTop="40dp"
                         android:text="Misc"
                         android:textAllCaps="true"
                         android:textColor="#fe5f00"
@@ -492,7 +492,7 @@
                     <View
                         android:id="@+id/divider11"
                         android:layout_width="match_parent"
-                        android:layout_height="4dp"
+                        android:layout_height="2dp"
                         android:layout_marginVertical="8dp"
                         android:background="@color/divider"
                         app:layout_constraintTop_toBottomOf="@id/misc" />
