--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,7 @@
     android:id="@+id/coordinator"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ng.activities.HomeActivity">
+    tools:context=".ng2.activities.HomeActivity">
 
     <include
         android:id="@+id/appbar"
