--- a/app/src/main/res/layout/activity_main_settings.xml
+++ b/app/src/main/res/layout/activity_main_settings.xml
@@ -214,7 +214,6 @@
                 android:layout_gravity="end"
                 android:layout_marginVertical="16dp"
                 android:drawableEnd="@drawable/keyboard_arrow_down"
-                android:drawableRight="@drawable/keyboard_arrow_down"
                 android:text="@string/advanced_options"
                 android:textColor="#fff" />
 
@@ -226,7 +225,6 @@
                 android:layout_gravity="end"
                 android:layout_marginVertical="16dp"
                 android:drawableEnd="@drawable/keyboard_arrow_up"
-                android:drawableRight="@drawable/keyboard_arrow_up"
                 android:text="@string/advanced_options"
                 android:textColor="#fff" />
 
@@ -521,7 +519,7 @@
                 android:background="#535353" />
 
             <TextView
-                android:id="@+id/update_btn"
+                android:id="@+id/update_firmware_button"
                 android:layout_width="match_parent"
                 android:layout_height="28dp"
                 android:layout_marginTop="8dp"
@@ -529,13 +527,9 @@
                 android:clickable="true"
                 android:focusable="true"
                 android:gravity="center_vertical"
-                android:text="@string/update_reboot_upgrade_firmware"
+                android:text="@string/update_firmware"
                 android:textAllCaps="true"
                 android:textColor="#D65757" />
-
-
         </LinearLayout>
     </ScrollView>
-
-
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
