--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,10 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".ng2.activities.HomeActivity">
 
-    <include
-        android:id="@+id/appbar"
-        layout="@layout/layout_appbar" />
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -31,35 +27,29 @@
 
         <Button
             android:id="@+id/refresh_list_button"
-            style="@style/ButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="@dimen/button_height"
             android:layout_marginHorizontal="16dp"
             android:layout_marginBottom="16dp"
             android:text="@string/refresh_list"
-            android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@id/instructions_button" />
 
         <Button
             android:id="@+id/upload_eloc_status_button"
-            style="@style/ButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="@dimen/button_height"
             android:layout_marginHorizontal="16dp"
             android:layout_marginBottom="16dp"
             android:text="@string/upload_eloc_status"
-            android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@id/refresh_list_button" />
 
         <Button
             android:id="@+id/find_eloc_button"
-            style="@style/ButtonStyle"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/button_height"
+            android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:layout_marginBottom="16dp"
             android:text="@string/map_button_text"
-            android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@id/upload_eloc_status_button" />
 
         <androidx.recyclerview.widget.RecyclerView
