--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -6,18 +6,19 @@
     android:gravity="center"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".ng.activities.SetupActivity">
+    tools:context=".ng2.activities.SetupActivity">
 
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="@string/a_few_things_must_be_done_to_proceed" />
+        android:gravity="center"
+        android:text="@string/a_few_things_must_be_done_to_proceed"
+        android:textAlignment="center" />
 
     <Button
         android:id="@+id/location_button"
-        style="@style/ButtonStyle"
         android:layout_width="@dimen/setup_button_width"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -25,7 +26,6 @@
 
     <Button
         android:id="@+id/location_state_button"
-        style="@style/ButtonStyle"
         android:layout_width="@dimen/setup_button_width"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -33,7 +33,6 @@
 
     <Button
         android:id="@+id/bluetooth_button"
-        style="@style/ButtonStyle"
         android:layout_width="@dimen/setup_button_width"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -41,7 +40,6 @@
 
     <Button
         android:id="@+id/bluetooth_state_button"
-        style="@style/ButtonStyle"
         android:layout_width="@dimen/setup_button_width"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
