--- a/app/src/main/res/layout/activity_user_prefs.xml
+++ b/app/src/main/res/layout/activity_user_prefs.xml
@@ -6,10 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".ng2.activities.UserPrefsActivity">
 
-    <include
-        android:id="@+id/appbar"
-        layout="@layout/layout_appbar" />
-
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -25,8 +21,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/font_size"
-                android:textSize="16sp" />
+                android:text="@string/font_size" />
 
             <RadioGroup
                 android:layout_width="match_parent"
@@ -35,21 +30,24 @@
 
                 <RadioButton
                     android:id="@+id/radFontSmall"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:checked="true"
                     android:text="@string/small" />
 
                 <RadioButton
                     android:id="@+id/radFontMedium"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:text="@string/medium" />
 
                 <RadioButton
                     android:id="@+id/radFontLarge"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:text="@string/large" />
             </RadioGroup>
 
