--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,17 +1,52 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
 
-    <style name="AppTheme" parent="Theme.Material3.Dark.NoActionBar">
+    <style name="AppTheme" parent="Theme.Material3.Dark">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="fontFamily">@font/quicksand</item>
+        <item name="materialButtonStyle">@style/AppButtonStyle</item>
+        <item name="materialAlertDialogTheme">@style/MaterialAlertDialogTheme</item>
+        <item name="actionBarStyle">@style/ActionBarStyle</item>
     </style>
 
-    <style name="ButtonStyle" parent="AppTheme">
+    <style name="AppThemeMedium" parent="AppTheme">
+        <item name="android:textSize">18sp</item>
+        <item name="android:labelTextSize">18sp</item>
+    </style>
+
+    <style name="AppThemeLarge" parent="AppTheme">
+        <item name="android:textSize">22sp</item>
+        <item name="android:labelTextSize">22sp</item>
+    </style>
+
+    <style name="AppButtonStyle" parent="Widget.Material3.Button.ElevatedButton">
         <item name="android:textColor">#fff</item>
         <item name="textAllCaps">true</item>
         <item name="cornerFamily">rounded</item>
         <item name="cornerRadius">50dp</item>
+        <item name="android:paddingStart">16dp</item>
+        <item name="android:paddingEnd">16dp</item>
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:backgroundTint">@color/colorPrimary</item>
+    </style>
+
+    <style name="ActionBarStyle" parent="Widget.Material3.ActionBar.Solid">
+        <item name="background">@drawable/actionbar_background</item>
+    </style>
+
+    <style name="MaterialAlertDialogTheme" parent="ThemeOverlay.Material3.MaterialAlertDialog">
+        <item name="buttonBarPositiveButtonStyle">@style/MaterialAlerDialogButtonStyle</item>
+        <item name="buttonBarNegativeButtonStyle">@style/MaterialAlerDialogButtonStyle</item>
+        <item name="buttonBarNeutralButtonStyle">@style/MaterialAlerDialogButtonStyle</item>
+    </style>
+
+    <style name="MaterialAlerDialogButtonStyle" parent="Widget.Material3.Button.TextButton.Dialog">
+        <item name="android:textColor">#fff</item>
+        <item name="fontWeight">600</item>
+        <item name="android:backgroundTint">@android:color/transparent</item>
     </style>
 
     <style name="InfoTextView" parent="AppTheme">
@@ -23,12 +58,11 @@
         <item name="android:layout_marginStart">16dp</item>
         <item name="android:textAllCaps">true</item>
         <item name="android:textColor">#E6FE5F00</item>
-        <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
     </style>
 
     <style name="TitleDescription" parent="InfoTextView">
-        <item name="android:textSize">12sp</item>
+        <item name="android:textAppearance">@style/TextAppearance.Material3.BodySmall</item>
     </style>
 
     <style name="TileTitle" parent="InfoTextView">
@@ -40,8 +74,6 @@
     </style>
 
     <style name="TileValue" parent="InfoTextView">
-        <item name="android:textSize">16sp</item>
-        <item name="android:textStyle">bold</item>
         <item name="android:layout_marginEnd">16dp</item>
     </style>
 </resources>
