--- a/app/src/main/res/layout/activity_terminal.xml
+++ b/app/src/main/res/layout/activity_terminal.xml
@@ -57,6 +57,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 tools:ignore="TouchTargetSizeCheck" />
 
+            <!-- Use fixed text size to override applying size based on theme selected by user -->
             <TextView
                 android:id="@+id/recBtn"
                 android:layout_width="match_parent"
@@ -65,6 +66,7 @@
                 android:layout_weight="0.2"
                 android:background="#232323"
                 android:clickable="true"
+                android:textSize="14sp"
                 android:focusable="true"
                 android:gravity="center"
                 android:orientation="horizontal"
