--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="setup_icon_size">44dp</dimen>
     <dimen name="setup_button_width">280dp</dimen>
     <dimen name="button_height">56dp</dimen>
+    <dimen name="auth_input_width">240dp</dimen>
 </resources>
