--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -76,5 +76,18 @@
     <style name="TileValue" parent="InfoTextView">
         <item name="android:layout_marginEnd">16dp</item>
     </style>
+
+    <style name="AppBaseButtonStyle" parent="Widget.Material3.Button.ElevatedButton">
+        <item name="android:textColor">#fff</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:backgroundTint">@color/colorPrimary</item>
+    </style>
+
+    <style name="AppTextButton" parent="AppBaseButtonStyle">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:background">?selectableItemBackground</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 </resources>
 
