--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <group android:id="@+id/group1">
-        <item
-            android:id="@+id/mnu_edit_profile"
-            android:icon="@drawable/edit"
-            android:title="@string/edit_profile" />
-    </group>
+<!--    <group android:id="@+id/group1">-->
+<!--        <item-->
+<!--            android:id="@+id/mnu_edit_profile"-->
+<!--            android:icon="@drawable/edit"-->
+<!--            android:title="@string/edit_profile" />-->
+<!--    </group>-->
     <group android:id="@+id/group2">
         <item
             android:id="@+id/mnu_find_my_eloc"
