--- a/app/src/main/res/layout/activity_user_prefs.xml
+++ b/app/src/main/res/layout/activity_user_prefs.xml
@@ -15,8 +15,53 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/main_menu_position" />
+
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/menu_position_chip_group"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="8dp"
+                app:selectionRequired="true"
+                app:singleSelection="true">
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/left_chip"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/top_left"
+                    android:textColor="@color/white"
+                    app:checkedIcon="@drawable/check"
+                    app:checkedIconEnabled="true"
+                    app:checkedIconTint="#fff"
+                    app:chipBackgroundColor="@color/colorPrimaryTranslucent" />
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/right_chip"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="true"
+                    android:text="@string/top_right"
+                    android:textColor="@color/white"
+                    app:checkedIcon="@drawable/check"
+                    app:checkedIconEnabled="true"
+                    app:checkedIconTint="#fff"
+                    app:chipBackgroundColor="@color/colorPrimary"
+                    app:chipStrokeColor="@color/colorPrimary" />
+
+            </com.google.android.material.chip.ChipGroup>
+
+            <com.google.android.material.divider.MaterialDivider
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="16dp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -51,6 +96,22 @@
                     android:text="@string/large" />
             </RadioGroup>
 
+            <com.google.android.material.divider.MaterialDivider
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="16dp" />
+
+            <com.google.android.material.materialswitch.MaterialSwitch
+                android:id="@+id/bt_devices_switch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/show_all_bt_scanning"
+                app:thumbTint="@color/white" />
+
+            <com.google.android.material.divider.MaterialDivider
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="16dp" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
