--- a/app/src/main/res/layout/layout_nav_header.xml
+++ b/app/src/main/res/layout/layout_nav_header.xml
@@ -6,77 +6,70 @@
     android:layout_height="wrap_content"
     android:padding="8dp">
 
-    <FrameLayout
-        android:id="@+id/profile_picture_frame_layout"
+    <Button
+        android:id="@+id/edit_button"
+        style="@style/AppTextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:drawableEnd="@drawable/edit"
+        android:text="@string/edit"
+        android:textSize="16sp"
+        app:drawableTint="@color/colorPrimary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/profile_picture_card_view"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:layout_marginHorizontal="8dp"
-        android:background="@drawable/circular_border"
+        android:elevation="0dp"
         android:padding="1dp"
+        app:cardBackgroundColor="#000"
+        app:cardCornerRadius="60dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:elevation="0dp"
-            app:cardCornerRadius="60dp">
+        <com.android.volley.toolbox.NetworkImageView
+            android:id="@+id/profile_picture_image_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/person"
+            android:contentDescription="@string/profile_picture"
+            android:scaleType="centerCrop"
+            android:src="@drawable/person"
+            tools:background="@tools:sample/avatars" />
+    </androidx.cardview.widget.CardView>
 
-            <com.android.volley.toolbox.NetworkImageView
-                android:id="@+id/profile_picture_image_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/person"
-                android:contentDescription="@string/profile_picture"
-                android:scaleType="centerCrop"
-                tools:background="@tools:sample/avatars"
-                android:src="@drawable/person" />
-        </androidx.cardview.widget.CardView>
-    </FrameLayout>
-
-    <LinearLayout
+    <TextView
+        android:id="@+id/email_address_text_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
+        android:alpha="0.8"
+        android:ellipsize="marquee"
         android:gravity="end"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="@id/profile_picture_frame_layout"
+        android:singleLine="true"
+        android:textAlignment="textEnd"
+        app:layout_constraintBottom_toBottomOf="@id/profile_picture_card_view"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/profile_picture_frame_layout"
-        app:layout_constraintTop_toTopOf="@id/profile_picture_frame_layout">
+        app:layout_constraintStart_toEndOf="@id/profile_picture_card_view"
+        tools:text="jane.doe@gmail.com" />
 
-        <TextView
-            android:id="@+id/user_id_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="16sp"
-            tools:text="@tools:sample/full_names" />
-
-        <TextView
-            android:id="@+id/email_address_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:alpha="0.8"
-            android:ellipsize="marquee"
-            android:singleLine="true"
-            tools:text="jane.doe@gmail.com" />
-
-        <Button
-            android:id="@+id/edit_button"
-            style="@style/AppTextButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:drawableEnd="@drawable/edit"
-            android:text="@string/edit"
-            android:textSize="16sp"
-            app:drawableTint="@color/colorPrimary" />
-    </LinearLayout>
+    <TextView
+        android:id="@+id/user_id_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="8dp"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@id/email_address_text_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:text="@tools:sample/full_names" />
 
     <com.google.android.material.divider.MaterialDivider
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/profile_picture_frame_layout" />
+        app:layout_constraintTop_toBottomOf="@id/profile_picture_card_view" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
