--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#bf360c</color>
+    <color name="colorPrimaryTranslucent">#66bf360c</color>
     <color name="colorPrimaryDark">#bf360c</color>
     <color name="colorAccent">#ff6e40</color>
 
@@ -14,5 +15,6 @@
 
     <color name="divider">#252525</color>
     <color name="cardview">#1E1E1E</color>
+    <color name="white">#fff</color>
 
 </resources>
