--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#bf360c</color>
+    <color name="colorPrimary">#4CAF50</color>
+    <color name="colorPrimaryTranslucent">#CDDC39</color>
+    <color name="colorPrimaryDark">#33691E</color>
+    <color name="colorAccent">#ff6e40</color>
+
+ <!--   <color name="colorPrimary">#bf360c</color>
     <color name="colorPrimaryTranslucent">#66bf360c</color>
     <color name="colorPrimaryDark">#bf360c</color>
-    <color name="colorAccent">#ff6e40</color>
+    <color name="colorAccent">#ff6e40</color>-->
 
     <color name="colorReceiveText">#00FF00</color>
     <color name="colorSendText">#82CAFF</color>
