--- a/app/src/main/res/layout/activity_main_settings.xml
+++ b/app/src/main/res/layout/activity_main_settings.xml
@@ -108,7 +108,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="@string/_44k"
-                            android:textColor="#B0FFFFFF"
+                            android:textColor="@color/white"
                             tools:checked="true" />
 
                         <RadioButton
@@ -117,7 +117,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="@string/_32k"
-                            android:textColor="#B0FFFFFF" />
+                            android:textColor="@color/white" />
 
                         <RadioButton
                             android:id="@+id/rad22k"
@@ -125,7 +125,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="@string/_22k"
-                            android:textColor="#B0FFFFFF" />
+                            android:textColor="@color/white" />
 
                         <RadioButton
                             android:id="@+id/rad16k"
@@ -133,7 +133,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="@string/_16k"
-                            android:textColor="#B0FFFFFF" />
+                            android:textColor="@color/white" />
 
                         <RadioButton
                             android:id="@+id/rad8k"
@@ -141,7 +141,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="@string/_8k"
-                            android:textColor="#B0FFFFFF" />
+                            android:textColor="@color/white" />
                     </RadioGroup>
 
                     <TextView
@@ -163,7 +163,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="@string/_12h"
-                            android:textColor="#B5FFFFFF" />
+                            android:textColor="@color/white" />
 
                         <RadioButton
                             android:id="@+id/rad4h"
@@ -171,7 +171,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="@string/_4h"
-                            android:textColor="#B5FFFFFF" />
+                            android:textColor="@color/white" />
 
                         <RadioButton
                             android:id="@+id/rad1h"
@@ -179,7 +179,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="@string/_1h"
-                            android:textColor="#B5FFFFFF" />
+                            android:textColor="@color/white" />
 
                         <RadioButton
                             android:id="@+id/rad1m"
@@ -187,7 +187,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="@string/_1m"
-                            android:textColor="#B5FFFFFF"
+                            android:textColor="@color/white"
                             tools:checked="true" />
 
 
@@ -197,7 +197,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="@string/_10s"
-                            android:textColor="#B5FFFFFF" />
+                            android:textColor="@color/white" />
 
                     </RadioGroup>
                 </LinearLayout>
@@ -211,7 +211,7 @@
                 android:layout_marginVertical="16dp"
                 android:drawableEnd="@drawable/keyboard_arrow_down"
                 android:text="@string/advanced_options"
-                android:textColor="#fff"
+                android:textColor="@color/white"
                 tools:ignore="DuplicateSpeakableTextCheck" />
 
             <Button
@@ -222,7 +222,7 @@
                 android:layout_marginVertical="16dp"
                 android:drawableEnd="@drawable/keyboard_arrow_up"
                 android:text="@string/advanced_options"
-                android:textColor="#fff" />
+                android:textColor="@color/white" />
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/command_line_card"
@@ -464,7 +464,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="@string/high"
-                            android:textColor="#B5FFFFFF" />
+                            android:textColor="@color/white" />
 
                         <RadioButton
                             android:id="@+id/radLow"
@@ -472,7 +472,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="@string/low"
-                            android:textColor="#B5FFFFFF" />
+                            android:textColor="@color/white" />
 
                     </RadioGroup>
 
