--- a/app/src/main/res/layout/layout_alert_option.xml
+++ b/app/src/main/res/layout/layout_alert_option.xml
@@ -14,7 +14,6 @@
         android:paddingHorizontal="32dp"
         android:textAlignment="center"
         android:textAllCaps="true"
-        android:textSize="16sp"
         tools:text="Hello" />
 
     <TextView
@@ -32,11 +31,35 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp" />
 
-    <Button
-        android:id="@+id/ok_button"
-        style="@style/AppTextButton"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@android:string/ok"
-        android:textSize="16sp" />
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/negative_button"
+            style="@style/AppTextButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@android:string/cancel"
+            android:textAlignment="center" />
+
+        <com.google.android.material.divider.MaterialDivider
+            android:layout_width="2dp"
+            android:layout_height="match_parent" />
+
+        <Button
+            android:id="@+id/positive_button"
+            style="@style/AppTextButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@android:string/ok"
+            android:textAlignment="center" />
+    </LinearLayout>
 </LinearLayout>
