--- a/app/src/main/res/layout/activity_device_settings.xml
+++ b/app/src/main/res/layout/activity_device_settings.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/coordinator"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".ng2.activities.DeviceSettingsActivity">
 
     <TextView
         android:id="@+id/instructions_button"
@@ -58,16 +59,14 @@
                             android:textAllCaps="true"
                             android:textStyle="bold" />
 
-                        <TextView
-                            android:id="@+id/recording_btn"
+                        <Button
+                            android:id="@+id/recording_button"
+                            style="@style/AppTextButton"
                             android:layout_width="wrap_content"
-                            android:layout_height="24dp"
-                            android:layout_marginHorizontal="8dp"
-                            android:gravity="center"
+                            android:layout_height="wrap_content"
                             android:text="@string/run"
-                            android:textAlignment="center"
-                            android:textAllCaps="true"
-                            app:drawableStartCompat="@drawable/run" />
+                            app:drawableEndCompat="@drawable/run"
+                            app:drawableTint="@color/colorPrimary" />
 
                     </LinearLayout>
 
@@ -78,7 +77,7 @@
                         android:hint="@string/file_header_name">
 
                         <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/eloc_bt_name_et"
+                            android:id="@+id/eloc_bt_name_edit_text"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
@@ -97,7 +96,7 @@
                         android:text="@string/sample_rate" />
 
                     <RadioGroup
-                        android:id="@+id/radioGroupSamplesPerSec"
+                        android:id="@+id/sample_rate_radio_group"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
@@ -152,7 +151,7 @@
                         android:text="@string/recording_time_per_file" />
 
                     <RadioGroup
-                        android:id="@+id/radioGroupSecPerFile"
+                        android:id="@+id/seconds_per_file_radio_group"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
@@ -252,16 +251,14 @@
                             android:textAllCaps="true"
                             android:textStyle="bold" />
 
-                        <TextView
-                            android:id="@+id/command_line_btn"
+                        <Button
+                            android:id="@+id/command_line_button"
+                            style="@style/AppTextButton"
                             android:layout_width="wrap_content"
-                            android:layout_height="24dp"
-                            android:layout_marginHorizontal="8dp"
-                            android:gravity="center"
+                            android:layout_height="wrap_content"
                             android:text="@string/run"
-                            android:textAlignment="center"
-                            android:textAllCaps="true"
-                            app:drawableStartCompat="@drawable/run" />
+                            app:drawableEndCompat="@drawable/run"
+                            app:drawableTint="@color/colorPrimary" />
 
                     </LinearLayout>
 
@@ -272,7 +269,7 @@
                         android:hint="@string/command">
 
                         <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/custom_command_et"
+                            android:id="@+id/custom_command_edit_text"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
@@ -314,16 +311,14 @@
                             android:textAllCaps="true"
                             android:textStyle="bold" />
 
-                        <TextView
-                            android:id="@+id/fileheader_btn"
+                        <Button
+                            android:id="@+id/file_header_button"
+                            style="@style/AppTextButton"
                             android:layout_width="wrap_content"
-                            android:layout_height="24dp"
-                            android:layout_marginHorizontal="8dp"
-                            android:gravity="center"
+                            android:layout_height="wrap_content"
                             android:text="@string/run"
-                            android:textAlignment="center"
-                            android:textAllCaps="true"
-                            app:drawableStartCompat="@drawable/run" />
+                            app:drawableEndCompat="@drawable/run"
+                            app:drawableTint="@color/colorPrimary" />
 
                     </LinearLayout>
 
@@ -377,16 +372,14 @@
                             android:textAllCaps="true"
                             android:textStyle="bold" />
 
-                        <TextView
-                            android:id="@+id/microphone_type_btn"
+                        <Button
+                            android:id="@+id/microphone_type_button"
+                            style="@style/AppTextButton"
                             android:layout_width="wrap_content"
-                            android:layout_height="24dp"
-                            android:layout_marginHorizontal="8dp"
-                            android:gravity="center"
+                            android:layout_height="wrap_content"
                             android:text="@string/run"
-                            android:textAlignment="center"
-                            android:textAllCaps="true"
-                            app:drawableStartCompat="@drawable/run" />
+                            app:drawableEndCompat="@drawable/run"
+                            app:drawableTint="@color/colorPrimary" />
 
                     </LinearLayout>
 
@@ -397,7 +390,7 @@
                         android:hint="@string/microphone_type">
 
                         <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/mic_type_et"
+                            android:id="@+id/mic_type_edit_text"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
@@ -439,21 +432,19 @@
                             android:textAllCaps="true"
                             android:textStyle="bold" />
 
-                        <TextView
-                            android:id="@+id/microphone_gain_btn"
+                        <Button
+                            android:id="@+id/microphone_gain_button"
+                            style="@style/AppTextButton"
                             android:layout_width="wrap_content"
-                            android:layout_height="24dp"
-                            android:layout_marginHorizontal="8dp"
-                            android:gravity="center"
+                            android:layout_height="wrap_content"
                             android:text="@string/run"
-                            android:textAlignment="center"
-                            android:textAllCaps="true"
-                            app:drawableStartCompat="@drawable/run" />
+                            app:drawableEndCompat="@drawable/run"
+                            app:drawableTint="@color/colorPrimary" />
 
                     </LinearLayout>
 
                     <RadioGroup
-                        android:id="@+id/radioGroupGain"
+                        android:id="@+id/gain_radio_group"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
@@ -516,18 +507,15 @@
                 android:layout_marginVertical="8dp"
                 android:background="#535353" />
 
-            <TextView
+            <Button
                 android:id="@+id/update_firmware_button"
+                style="@style/AppTextButton"
                 android:layout_width="match_parent"
-                android:layout_height="28dp"
-                android:layout_marginTop="8dp"
-                android:background="?selectableItemBackground"
-                android:clickable="true"
-                android:focusable="true"
-                android:gravity="center_vertical"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="16dp"
                 android:text="@string/update_firmware"
-                android:textAllCaps="true"
-                android:textColor="#D65757" />
+                app:drawableEndCompat="@drawable/system_update"
+                app:drawableTint="@color/colorPrimary" />
         </LinearLayout>
     </ScrollView>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
